<resources>
    <string name="web_client_id">510873132832-cbjnduvm1jk12jjt2s5kim35qe8m67sn.apps.googleusercontent.com</string>
    <string name="app_name">BFit Tracker</string>
    <string name="action_settings">Settings</string>
    <string name="intro_text">Use this app to manage your work out time, included is a high quality time plan which fits your daily, busy life as well as help you maintain a healthy lifestyle. </string>
    <string name="btn_start">Start</string>
    <string name="btn_next">Next</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_more">More</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_no">No</string>
    <string name="btn_login">Login</string>
    <string name="btn_back">Back</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="initial_text">Do you have an account?</string>
    <string name="email_text">Email</string>
    <string name="password_text">Password</string>
    <string name="edit_email">Email</string>
    <string name="edit_password">Password</string>
    <string name="welcome_subtitle">Sign in to continue</string>
    <string name="no_account_sign_up">Don\'t have an account?</string>
    <string name="enter_forename">Forename</string>
    <string name="enter_surname">Surname</string>
    <string name="welcome_title">Welcome to BFit.</string>
    <string name="enter_dob">Date of Birth</string>
    <string name="enter_email">Enter email</string>
    <string name="confirm_email">Confirm email</string>
    <string name="enter_password">Enter password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="progress_number">X of X</string>
    <string name="sign_up_title_dob">Date of Birth</string>
    <string name="sign_up_title_sex">Sex</string>
    <string name="sign_up_title_weight">Weight (KG)</string>
    <string name="sign_up_title_height">Height (CM)</string>
    <string name="sign_up_disabilities">Do you consider yourself to have a disability?</string>
    <string name="sign_up_title_location">Training Location</string>
    <string name="sign_up_title_times">Work Out Schedule</string>
    <string name="btn_male">Male</string>
    <string name="btn_female">Female</string>
    <string name="btn_prefer_not_to_say">Prefer not to say</string>
    <string name="btn_submit">Submit</string>
    <string name="secondary_title">(Select all that apply)</string>
    <string name="btn_gym">Gym</string>
    <string name="btn_home">Home</string>
    <string name="btn_park">Park</string>
    <string name="text_monday">Monday</string>
    <string name="text_tuesday">Tuesday</string>
    <string name="text_wednesday">Wednesday</string>
    <string name="text_thursday">Thursday</string>
    <string name="text_friday">Friday</string>
    <string name="text_saturday">Saturday</string>
    <string name="text_sunday">Sunday</string>
    <string name="text_start_time">Start Time</string>
    <string name="text_end_time">End Time</string>
    <string name="error_field_empty">Field cannot be left empty</string>
    <string name="error_option_is_required">One of the options must be selected</string>
    <string name="error_time_greater">Your workout end time seems to be before your start time</string>
    <string name="title_sign_out">Sign out</string>
    <string name="confirm_sign_out">Are you sure you want to sign out?</string>
    <string name="option_cancel">Cancel</string>
    <string name="option_sign_out">Yes, sign out</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="info_password_reset_email_sent">Password reset email has been sent</string>
    <string name="error_auth_failed">Authentication failed.</string>
    <string name="info_user_logged_in">User logged in</string>
    <string name="title_home">Home</string>
    <string name="title_workouts">Workouts</string>
    <string name="title_my_account">My Account</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_calendar_dialog">Record Data</string>
    <string name="bmi">BMI</string>
    <string name="weight">Weight</string>
    <string name="calorie_intake">Calorie intake</string>
    <string name="water_intake">Water intake</string>
    <string name="btn_confirm">Confirm</string>
    <string name="homepage_title">Hope you had a great day, let\'s get working!</string>
    <string name="num_of_hours_worked_desc">Number of hours worked (per week)</string>
    <string name="workouts_completed_desc">Total workouts completed (per week)</string>
    <string name="insights_title">Insights</string>
    <string name="progress_steps_pattern">%.0f Steps</string>
    <string name="title_step_target_dialog">Step Target</string>
    <string name="progress_nutrients_weight">0kg</string>
    <string name="nutrients_calories_title">Calories Intake</string>
    <string name="hydration_data_title">Amount of water (litres/day)</string>
    <string name="nutrients_add_barcode_title">Add nutrients with barcode</string>
    <string name="weekly_nutrients_intake_title">Weekly Nutrients Intake</string>
    <string name="weekly_fat_intake">Fat:</string>
    <string name="weekly_fibre_intake">Fibre:</string>
    <string name="weekly_protein_intake">Protein:</string>
    <string name="weekly_saturated_fat_intake">Saturated Fat:</string>
    <string name="weekly_sodium_intake">Sodium:</string>
    <string name="weekly_sugar_intake">Sugar:</string>
    <string name="weekly_carbs_intake">Carbohydrates:</string>
    <string name="daily_intake_fat">Fat</string>
    <string name="daily_intake_saturated_fat">Saturated Fat</string>
    <string name="daily_intake_sodium">Sodium</string>
    <string name="daily_intake_protein">Protein</string>
    <string name="daily_intake_carbs">Carbohydrates</string>
    <string name="daily_intake_calories">Calories</string>
    <string name="daily_intake_sugar">Sugar</string>
    <string name="daily_intake_fibre">Fibre</string>
    <string name="title_weight_target_dialog">Weight Target (kg)</string>
    <string name="title_calories_target_dialog">Calories Target (kcal)</string>
    <string name="metric_weight">%1$dkg</string>
    <string name="imperial_weight">%1$dlbs</string>
    <string name="weight_text_metric">%1$d kg starting weight</string>
    <string name="weight_text_imperial">%1$d lbs starting weight</string>
    <string name="steps">Steps</string>
    <string name="week_steps">%1$d steps last week</string>
    <string name="exercises">Exercises</string>
    <string name="settings_units">Units of measure</string>
    <string name="btn_radio_metric">Metric (m/kg)</string>
    <string name="btn_radio_imperial">Imperial (ft/lbs)</string>
    <string name="btn_delete_acc">Delete Account</string>
    <string name="title_water_target_dialog">Water Target (litres)</string>
</resources>