<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SettingUpActivity$PlaceholderFragment">

    <TextView
        android:id="@+id/text_view_progress_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/questrial_regular"
        android:text="@string/progress_number"
        android:textColor="#808080"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:padding="25dp"
            app:srcCompat="@drawable/logo"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:fontFamily="@font/rubik_regular"
            android:gravity="center"
            android:text="@string/sign_up_title_sex"
            android:textColor="@color/textColorPrimary"
            android:textSize="30sp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="80dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/button_sex_male"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_marginBottom="20dp"
                android:background="@drawable/btn_rounded_secondary"
                android:button="@null"
                android:fontFamily="@font/questrial_regular"
                android:text="@string/btn_male"
                android:textAllCaps="true"
                android:textColor="@drawable/radio_text_selected"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/button_sex_female"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_marginBottom="20dp"
                android:background="@drawable/btn_rounded_secondary"
                android:button="@null"
                android:fontFamily="@font/questrial_regular"
                android:text="@string/btn_female"
                android:textAllCaps="true"
                android:textColor="@drawable/radio_text_selected"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RadioButton
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_marginBottom="20dp"
                android:background="@drawable/btn_rounded_secondary"
                android:button="@null"
                android:fontFamily="@font/questrial_regular"
                android:text="@string/btn_prefer_not_to_say"
                android:textColor="@drawable/radio_text_selected"
                android:textSize="18sp" />
        </RadioGroup>

    </LinearLayout>

    <include
        layout="@layout/fragment_sign_up_bottom_btn"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom|end" />
</RelativeLayout>